# OpenGL-Starter

./: CMakeLists.txt  readme.md  vcpkg.json
assets/shaders/: template-frag.glsl  template-vert.glsl
src/: main.cpp
src/file/: file.cpp  file.hpp
src/shader/: shader.cpp  shader.hpp
src/state/: state.cpp  state.hpp
src/window/: window.cpp  window.hpp
